--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,7 @@ dependencies {
     implementation 'com.hbb20:ccp:2.4.5'
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
     implementation 'com.google.firebase:firebase-firestore-ktx:24.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
