--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,6 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation("androidx.browser:browser:1.4.0")
 }
