--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+/.idea/render.experimental.xml
 /build
 /captures
 .cxx
